--- a/templates/config-onokom-air-hs-5-mb-b.json
+++ b/templates/config-onokom-air-hs-5-mb-b.json
@@ -1,15 +1,15 @@
 {
   "title": "template_title",
-  "device_type": "ONOKOM-AIR-GR-1-MB-B",
+  "device_type": "ONOKOM-AIR-HS-5-MB-B",
   "group": "g-air-conditioning",
   "hw": [
     {
-      "signature": "GR-1-MB-B"
+      "signature": "HS-5-MB-B"
     }
   ],
   "device": {
-    "name": "ONOKOM-AIR-GR-1-MB-B",
-    "id": "ONOKOM-AIR-GR-1-MB-B",
+    "name": "ONOKOM-AIR-HS-5-MB-B",
+    "id": "ONOKOM-AIR-HS-5-MB-B",
     "groups": [
       {
         "title": "General",
@@ -27,19 +27,14 @@
         "order": 3
       },
       {
-        "title": "Additional",
-        "id": "additional",
-        "order": 4
-      },
-      {
-        "title": "Indication",
-        "id": "indication",
-        "order": 5
-      },
-      {
         "title": "HW Info",
         "id": "hw_info",
         "order": 6
+      },
+      {
+        "title": "Setup",
+        "id": "setup",
+        "order": 7
       },
       {
         "title": "Debug",
@@ -48,22 +43,6 @@
       }
     ],
     "parameters": [
-      {
-        "id": "Disable_screen_when_power_off",
-        "title": "Disable screen when power off",
-        "address": 41,
-        "reg_type": "coil",
-        "enum": [
-          0,
-          1
-        ],
-        "enum_titles": [
-          "No",
-          "Yes"
-        ],
-        "group": "indication",
-        "order": 1
-      },
       {
         "id": "Allow_the_use_of_an_external_temperature_sensor",
         "title": "Allow the use of an external temperature sensor",
@@ -280,7 +259,7 @@
         "type": "range",
         "format": "u16",
         "min": 0,
-        "max": 5,
+        "max": 6,
         "sporadic": true,
         "group": "general",
         "condition": "Show_fan_as_range==1"
@@ -292,7 +271,7 @@
         "type": "value",
         "format": "u16",
         "min": 0,
-        "max": 5,
+        "max": 6,
         "sporadic": true,
         "group": "general",
         "enum": [
@@ -301,7 +280,8 @@
           2,
           3,
           4,
-          5
+          5,
+          6
         ],
         "enum_titles": [
           "Auto",
@@ -309,7 +289,8 @@
           "2 Speed",
           "3 Speed",
           "4 Speed",
-          "5 Speed"
+          "5 Speed",
+          "6 Speed"
         ],
         "condition": "Show_fan_as_range!=1"
       },
@@ -320,7 +301,7 @@
         "type": "range",
         "format": "u16",
         "min": 0,
-        "max": 7,
+        "max": 6,
         "sporadic": true,
         "group": "general",
         "condition": "Show_fan_as_range==1"
@@ -353,7 +334,7 @@
           "3 Speed",
           "4 Speed",
           "5 Speed",
-          "Turbo mode"
+          "6 Speed"
         ],
         "condition": "Show_fan_as_range!=1"
       },
@@ -404,7 +385,7 @@
         "type": "range",
         "format": "s16",
         "min": 16,
-        "max": 30,
+        "max": 32,
         "scale": 0.01,
         "sporadic": true,
         "group": "temperatureControl",
@@ -493,7 +474,7 @@
         "type": "range",
         "format": "u16",
         "min": 0,
-        "max": 6,
+        "max": 8,
         "sporadic": true,
         "group": "vanes",
         "condition": "Show_vanes_as_range==1"
@@ -505,7 +486,7 @@
         "type": "value",
         "format": "u16",
         "min": 0,
-        "max": 6,
+        "max": 8,
         "sporadic": true,
         "group": "vanes",
         "enum": [
@@ -515,14 +496,18 @@
           3,
           4,
           5,
-          6
+          6,
+          7,
+          8
         ],
         "enum_titles": [
           "Stop",
           "Swing",
           "Far Left",
           "Left",
+          "Middle Left",
           "Middle",
+          "Middle Right",
           "Right",
           "Far Right"
         ],
@@ -563,68 +548,6 @@
         "condition": "Show_vanes_as_range!=1"
       },
       {
-        "name": "Quiet mode",
-        "enabled": false,
-        "reg_type": "coil",
-        "address": 4,
-        "type": "switch",
-        "sporadic": true,
-        "group": "additional"
-      },
-      {
-        "name": "Eco mode",
-        "enabled": false,
-        "reg_type": "coil",
-        "address": 6,
-        "type": "switch",
-        "sporadic": true,
-        "group": "additional"
-      },
-      {
-        "name": "Turbo mode",
-        "enabled": false,
-        "reg_type": "coil",
-        "address": 7,
-        "type": "switch",
-        "sporadic": true,
-        "group": "additional"
-      },
-      {
-        "name": "Sleep mode",
-        "enabled": false,
-        "reg_type": "coil",
-        "address": 8,
-        "type": "switch",
-        "sporadic": true,
-        "group": "additional"
-      },
-      {
-        "name": "Ionization",
-        "enabled": false,
-        "reg_type": "coil",
-        "address": 9,
-        "type": "switch",
-        "sporadic": true,
-        "group": "additional"
-      },
-      {
-        "name": "Screen light",
-        "reg_type": "coil",
-        "address": 2,
-        "type": "switch",
-        "sporadic": true,
-        "group": "indication"
-      },
-      {
-        "name": "Disable screen when power off",
-        "enabled": false,
-        "reg_type": "coil",
-        "address": 41,
-        "type": "switch",
-        "sporadic": true,
-        "group": "indication"
-      },
-      {
         "name": "Temeperature correction",
         "reg_type": "holding",
         "address": 20,
@@ -644,6 +567,26 @@
         "sporadic": true,
         "group": "debug",
         "readonly": true
+      },
+      {
+        "name": "Indoor unit model",
+        "reg_type": "holding",
+        "address": 500,
+        "type": "text",
+        "format": "string",
+        "group": "setup",
+        "readonly": true,
+        "string_data_size": 15
+      },
+      {
+        "name": "Outdoor unit model",
+        "reg_type": "holding",
+        "address": 520,
+        "type": "text",
+        "format": "string",
+        "group": "setup",
+        "readonly": true,
+        "string_data_size": 15
       },
       {
         "name": "HW Version",
@@ -729,14 +672,33 @@
         "address": 120,
         "type": "pushbutton",
         "group": "hw_info"
+      },
+      {
+        "name": "Gateway mode",
+        "reg_type": "holding",
+        "address": 656,
+        "type": "value",
+        "min": 0,
+        "max": 2,
+        "group": "setup",
+        "enum": [
+          0,
+          1,
+          2
+        ],
+        "enum_titles": [
+          "LISTEN_ONLY",
+          "EMULATE_M_WRC",
+          "EMULATE_S_WRC"
+        ]
       }
     ],
     "translations": {
       "en": {
-        "template_title": "ONOKOM AIR GR-1-MB-B (Adapter for household GREE systems)"
+        "template_title": "ONOKOM AIR HS-5-MB-B (Adapter for VRF Hisense systems)"
       },
       "ru": {
-        "template_title": "ONOKOM AIR GR-1-MB-B (Адаптер для бытовых систем GREE)",
+        "template_title": "ONOKOM AIR HS-5-MB-B (Адаптер для мультизональных систем Hisense)",
         "General": "Основные режимы и функции",
         "Active": "Состояние",
         "Mode": "Режим",
@@ -771,7 +733,9 @@
         "Highest": "Самое высокое",
         "Far Left": "Самое левое",
         "Left": "Левое",
+        "Middle Left": "Среднее левое",
         "Right": "Правое",
+        "Middle Right": "Среднее правое",
         "Far Right": "Самое правое",
         "Vertical vanes": "Вертикальные жалюзи",
         "Vanes swing": "Качание жалюзи",
@@ -780,20 +744,13 @@
         "Swinging horizontal blinds": "Качание горизонтальных жалюзи",
         "Swinging vertical blinds": "Качание вертикальных жалюзи",
         "Show fan as range": "Отображать вентилятор как ползунок",
-        "Additional": "Дополнительные режимы и функции",
         "1 Speed": "1 Скорость",
         "2 Speed": "2 Скорость",
         "3 Speed": "3 Скорость",
         "4 Speed": "4 Скорость",
         "5 Speed": "5 Скорость",
+        "6 Speed": "6 Скорость",
         "Quiet mode": "Режим тихий",
-        "Eco mode": "Режим эко",
-        "Turbo mode": "Режим турбо",
-        "Sleep mode": "Режим сна",
-        "Ionization": "Ионизация",
-        "Indication": "Индикация",
-        "Screen light": "Подсветка экрана",
-        "Disable screen when power off": "Отключать экран при отключении питания",
         "No": "Нет",
         "Yes": "Да",
         "Baud rate": "Скорость обмена",
@@ -809,6 +766,13 @@
         "MCU Temperature": "Температура МК",
         "Serial": "Серийный номер",
         "Reboot Device": "Перезагрузить устройство",
+        "Setup": "Настройки",
+        "Gateway mode": "Режим шлюза",
+        "LISTEN_ONLY": "Слушатель",
+        "EMULATE_M_WRC": "Главный",
+        "EMULATE_S_WRC": "Ведомый",
+        "Outdoor unit model": "Наружный блок",
+        "Indoor unit model": "Внутренний блок",
         "Debug": "Диагностика",
         "Temeperature correction": "Коррекция температуры",
         "AC connected": "Кондиционер подключен"
