--- a/templates/config-onokom-air-hs-6-mb-b.json
+++ b/templates/config-onokom-air-hs-6-mb-b.json
@@ -1,15 +1,15 @@
 {
   "title": "template_title",
-  "device_type": "ONOKOM-AIR-GR-1-MB-B",
+  "device_type": "ONOKOM-AIR-HS-6-MB-B",
   "group": "g-air-conditioning",
   "hw": [
     {
-      "signature": "GR-1-MB-B"
+      "signature": "HS-6-MB-B"
     }
   ],
   "device": {
-    "name": "ONOKOM-AIR-GR-1-MB-B",
-    "id": "ONOKOM-AIR-GR-1-MB-B",
+    "name": "ONOKOM-AIR-HS-6-MB-B",
+    "id": "ONOKOM-AIR-HS-6-MB-B",
     "groups": [
       {
         "title": "General",
@@ -32,11 +32,6 @@
         "order": 4
       },
       {
-        "title": "Indication",
-        "id": "indication",
-        "order": 5
-      },
-      {
         "title": "HW Info",
         "id": "hw_info",
         "order": 6
@@ -48,22 +43,6 @@
       }
     ],
     "parameters": [
-      {
-        "id": "Disable_screen_when_power_off",
-        "title": "Disable screen when power off",
-        "address": 41,
-        "reg_type": "coil",
-        "enum": [
-          0,
-          1
-        ],
-        "enum_titles": [
-          "No",
-          "Yes"
-        ],
-        "group": "indication",
-        "order": 1
-      },
       {
         "id": "Allow_the_use_of_an_external_temperature_sensor",
         "title": "Allow the use of an external temperature sensor",
@@ -280,7 +259,7 @@
         "type": "range",
         "format": "u16",
         "min": 0,
-        "max": 5,
+        "max": 3,
         "sporadic": true,
         "group": "general",
         "condition": "Show_fan_as_range==1"
@@ -292,24 +271,20 @@
         "type": "value",
         "format": "u16",
         "min": 0,
-        "max": 5,
+        "max": 3,
         "sporadic": true,
         "group": "general",
         "enum": [
           0,
           1,
           2,
-          3,
-          4,
-          5
+          3
         ],
         "enum_titles": [
           "Auto",
           "1 Speed",
           "2 Speed",
-          "3 Speed",
-          "4 Speed",
-          "5 Speed"
+          "3 Speed"
         ],
         "condition": "Show_fan_as_range!=1"
       },
@@ -320,7 +295,7 @@
         "type": "range",
         "format": "u16",
         "min": 0,
-        "max": 7,
+        "max": 4,
         "sporadic": true,
         "group": "general",
         "condition": "Show_fan_as_range==1"
@@ -332,28 +307,20 @@
         "type": "value",
         "format": "u16",
         "min": 0,
-        "max": 7,
+        "max": 4,
         "sporadic": true,
         "group": "general",
         "enum": [
           0,
-          1,
           2,
           3,
-          4,
-          5,
-          6,
-          7
+          4
         ],
         "enum_titles": [
           "Auto",
-          "Quiet mode",
           "1 Speed",
           "2 Speed",
-          "3 Speed",
-          "4 Speed",
-          "5 Speed",
-          "Turbo mode"
+          "3 Speed"
         ],
         "condition": "Show_fan_as_range!=1"
       },
@@ -385,10 +352,10 @@
         "condition": "Allow_the_use_of_an_external_temperature_sensor==1"
       },
       {
-        "name": "Outdoor air temperature",
+        "name": "Indoor heat exchanger temperature",
         "enabled": false,
         "reg_type": "holding",
-        "address": 4,
+        "address": 23,
         "type": "value",
         "format": "s16",
         "scale": 0.01,
@@ -445,151 +412,6 @@
         "condition": "Show_thermostat_state_as_range!=1"
       },
       {
-        "name": "Horizontal vanes",
-        "reg_type": "holding",
-        "address": 9,
-        "type": "range",
-        "format": "u16",
-        "min": 0,
-        "max": 6,
-        "sporadic": true,
-        "group": "vanes",
-        "condition": "Show_vanes_as_range==1"
-      },
-      {
-        "name": "Horizontal vanes",
-        "reg_type": "holding",
-        "address": 9,
-        "type": "value",
-        "format": "u16",
-        "min": 0,
-        "max": 6,
-        "sporadic": true,
-        "group": "vanes",
-        "enum": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6
-        ],
-        "enum_titles": [
-          "Stop",
-          "Swing",
-          "Lowest",
-          "Low",
-          "Middle",
-          "High",
-          "Highest"
-        ],
-        "condition": "Show_vanes_as_range!=1"
-      },
-      {
-        "name": "Vertical vanes",
-        "reg_type": "holding",
-        "address": 10,
-        "type": "range",
-        "format": "u16",
-        "min": 0,
-        "max": 6,
-        "sporadic": true,
-        "group": "vanes",
-        "condition": "Show_vanes_as_range==1"
-      },
-      {
-        "name": "Vertical vanes",
-        "reg_type": "holding",
-        "address": 10,
-        "type": "value",
-        "format": "u16",
-        "min": 0,
-        "max": 6,
-        "sporadic": true,
-        "group": "vanes",
-        "enum": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6
-        ],
-        "enum_titles": [
-          "Stop",
-          "Swing",
-          "Far Left",
-          "Left",
-          "Middle",
-          "Right",
-          "Far Right"
-        ],
-        "condition": "Show_vanes_as_range!=1"
-      },
-      {
-        "name": "Vanes swing",
-        "reg_type": "holding",
-        "address": 11,
-        "type": "range",
-        "format": "u16",
-        "min": 0,
-        "max": 3,
-        "sporadic": false,
-        "group": "vanes",
-        "condition": "Show_vanes_as_range==1"
-      },
-      {
-        "name": "Vanes swing",
-        "reg_type": "holding",
-        "address": 11,
-        "type": "value",
-        "format": "u16",
-        "sporadic": false,
-        "group": "vanes",
-        "enum": [
-          0,
-          1,
-          2,
-          3
-        ],
-        "enum_titles": [
-          "Stop",
-          "Horizontal and vertical swing",
-          "Swinging horizontal blinds",
-          "Swinging vertical blinds"
-        ],
-        "condition": "Show_vanes_as_range!=1"
-      },
-      {
-        "name": "Quiet mode",
-        "enabled": false,
-        "reg_type": "coil",
-        "address": 4,
-        "type": "switch",
-        "sporadic": true,
-        "group": "additional"
-      },
-      {
-        "name": "Eco mode",
-        "enabled": false,
-        "reg_type": "coil",
-        "address": 6,
-        "type": "switch",
-        "sporadic": true,
-        "group": "additional"
-      },
-      {
-        "name": "Turbo mode",
-        "enabled": false,
-        "reg_type": "coil",
-        "address": 7,
-        "type": "switch",
-        "sporadic": true,
-        "group": "additional"
-      },
-      {
         "name": "Sleep mode",
         "enabled": false,
         "reg_type": "coil",
@@ -599,42 +421,30 @@
         "group": "additional"
       },
       {
-        "name": "Ionization",
+        "name": "Current fan speed",
         "enabled": false,
-        "reg_type": "coil",
-        "address": 9,
-        "type": "switch",
-        "sporadic": true,
-        "group": "additional"
-      },
-      {
-        "name": "Screen light",
-        "reg_type": "coil",
-        "address": 2,
-        "type": "switch",
-        "sporadic": true,
-        "group": "indication"
-      },
-      {
-        "name": "Disable screen when power off",
-        "enabled": false,
-        "reg_type": "coil",
-        "address": 41,
-        "type": "switch",
-        "sporadic": true,
-        "group": "indication"
-      },
-      {
-        "name": "Temeperature correction",
         "reg_type": "holding",
-        "address": 20,
-        "type": "value",
-        "format": "s16",
-        "min": -30,
-        "max": 30,
+        "address": 32,
+        "type": "range",
+        "min": 1,
+        "max": 3,
         "sporadic": true,
-        "group": "temperatureControl",
-        "condition": "Allow_the_use_of_an_external_temperature_sensor==1"
+        "group": "debug",
+        "readonly": true,
+        "units": "rpm"
+      },
+      {
+        "name": "Current compressor power",
+        "enabled": false,
+        "reg_type": "holding",
+        "address": 21,
+        "type": "range",
+        "min": 0,
+        "max": 100,
+        "sporadic": true,
+        "group": "debug",
+        "readonly": true,
+        "units": "%"
       },
       {
         "name": "AC connected",
@@ -733,10 +543,10 @@
     ],
     "translations": {
       "en": {
-        "template_title": "ONOKOM AIR GR-1-MB-B (Adapter for household GREE systems)"
+        "template_title": "ONOKOM AIR HS-6-MB-B (Adapter for Hisense Semi-Industrial Systems)"
       },
       "ru": {
-        "template_title": "ONOKOM AIR GR-1-MB-B (Адаптер для бытовых систем GREE)",
+        "template_title": "ONOKOM AIR HS-6-MB-B (Адаптер для полупромышленных систем Hisense)",
         "General": "Основные режимы и функции",
         "Active": "Состояние",
         "Mode": "Режим",
@@ -756,44 +566,18 @@
         "Temperature control": "Контроль температуры",
         "Allow the use of an external temperature sensor": "Разрешить использование внешнего датчика температуры",
         "Indoor air temperature": "Температура воздуха в помещении",
-        "Outdoor air temperature": "Температура воздуха на улице",
+        "Indoor heat exchanger temperature": "Температура внутреннего теплообменника",
         "Target temperature": "Целевая температура",
         "Show thermostat state as range": "Отображать состояние термостата как ползунок",
         "Thermostat state": "Состояние термостата",
         "Vanes": "Жалюзи",
         "Show vanes as range": "Отображать жалюзи как ползунок",
-        "Horizontal vanes": "Горизонтальные жалюзи",
-        "Swing": "Качание",
-        "Lowest": "Самое низкое",
-        "Low": "Низкое",
-        "Middle": "Среднее",
-        "High": "Высокое",
-        "Highest": "Самое высокое",
-        "Far Left": "Самое левое",
-        "Left": "Левое",
-        "Right": "Правое",
-        "Far Right": "Самое правое",
-        "Vertical vanes": "Вертикальные жалюзи",
-        "Vanes swing": "Качание жалюзи",
-        "Stop": "Остановлены",
-        "Horizontal and vertical swing": "Качание горизонтальное и вертикальное",
-        "Swinging horizontal blinds": "Качание горизонтальных жалюзи",
-        "Swinging vertical blinds": "Качание вертикальных жалюзи",
         "Show fan as range": "Отображать вентилятор как ползунок",
         "Additional": "Дополнительные режимы и функции",
         "1 Speed": "1 Скорость",
         "2 Speed": "2 Скорость",
         "3 Speed": "3 Скорость",
-        "4 Speed": "4 Скорость",
-        "5 Speed": "5 Скорость",
-        "Quiet mode": "Режим тихий",
-        "Eco mode": "Режим эко",
-        "Turbo mode": "Режим турбо",
         "Sleep mode": "Режим сна",
-        "Ionization": "Ионизация",
-        "Indication": "Индикация",
-        "Screen light": "Подсветка экрана",
-        "Disable screen when power off": "Отключать экран при отключении питания",
         "No": "Нет",
         "Yes": "Да",
         "Baud rate": "Скорость обмена",
@@ -810,7 +594,8 @@
         "Serial": "Серийный номер",
         "Reboot Device": "Перезагрузить устройство",
         "Debug": "Диагностика",
-        "Temeperature correction": "Коррекция температуры",
+        "Current compressor power": "Текущая мощность компрессора",
+        "Current fan speed": "Текущая скорость вентилятора",
         "AC connected": "Кондиционер подключен"
       }
     }
