--- a/templates/config-onokom-air-md-1-mb-b.json
+++ b/templates/config-onokom-air-md-1-mb-b.json
@@ -1,15 +1,15 @@
 {
   "title": "template_title",
-  "device_type": "ONOKOM-AIR-GR-1-MB-B",
+  "device_type": "ONOKOM-AIR-MD-1-MB-B",
   "group": "g-air-conditioning",
   "hw": [
     {
-      "signature": "GR-1-MB-B"
+      "signature": "MD-1-MB-B"
     }
   ],
   "device": {
-    "name": "ONOKOM-AIR-GR-1-MB-B",
-    "id": "ONOKOM-AIR-GR-1-MB-B",
+    "name": "ONOKOM-AIR-MD-1-MB-B",
+    "id": "ONOKOM-AIR-MD-1-MB-B",
     "groups": [
       {
         "title": "General",
@@ -32,11 +32,6 @@
         "order": 4
       },
       {
-        "title": "Indication",
-        "id": "indication",
-        "order": 5
-      },
-      {
         "title": "HW Info",
         "id": "hw_info",
         "order": 6
@@ -48,22 +43,6 @@
       }
     ],
     "parameters": [
-      {
-        "id": "Disable_screen_when_power_off",
-        "title": "Disable screen when power off",
-        "address": 41,
-        "reg_type": "coil",
-        "enum": [
-          0,
-          1
-        ],
-        "enum_titles": [
-          "No",
-          "Yes"
-        ],
-        "group": "indication",
-        "order": 1
-      },
       {
         "id": "Allow_the_use_of_an_external_temperature_sensor",
         "title": "Allow the use of an external temperature sensor",
@@ -385,19 +364,6 @@
         "condition": "Allow_the_use_of_an_external_temperature_sensor==1"
       },
       {
-        "name": "Outdoor air temperature",
-        "enabled": false,
-        "reg_type": "holding",
-        "address": 4,
-        "type": "value",
-        "format": "s16",
-        "scale": 0.01,
-        "sporadic": true,
-        "group": "temperatureControl",
-        "readonly": true,
-        "units": "deg C"
-      },
-      {
         "name": "Target temperature",
         "reg_type": "holding",
         "address": 5,
@@ -451,7 +417,7 @@
         "type": "range",
         "format": "u16",
         "min": 0,
-        "max": 6,
+        "max": 1,
         "sporadic": true,
         "group": "vanes",
         "condition": "Show_vanes_as_range==1"
@@ -463,26 +429,16 @@
         "type": "value",
         "format": "u16",
         "min": 0,
-        "max": 6,
+        "max": 1,
         "sporadic": true,
         "group": "vanes",
         "enum": [
           0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6
+          1
         ],
         "enum_titles": [
           "Stop",
-          "Swing",
-          "Lowest",
-          "Low",
-          "Middle",
-          "High",
-          "Highest"
+          "Swing"
         ],
         "condition": "Show_vanes_as_range!=1"
       },
@@ -493,7 +449,7 @@
         "type": "range",
         "format": "u16",
         "min": 0,
-        "max": 6,
+        "max": 1,
         "sporadic": true,
         "group": "vanes",
         "condition": "Show_vanes_as_range==1"
@@ -505,26 +461,16 @@
         "type": "value",
         "format": "u16",
         "min": 0,
-        "max": 6,
+        "max": 1,
         "sporadic": true,
         "group": "vanes",
         "enum": [
           0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6
+          1
         ],
         "enum_titles": [
           "Stop",
-          "Swing",
-          "Far Left",
-          "Left",
-          "Middle",
-          "Right",
-          "Far Right"
+          "Swing"
         ],
         "condition": "Show_vanes_as_range!=1"
       },
@@ -572,15 +518,6 @@
         "group": "additional"
       },
       {
-        "name": "Eco mode",
-        "enabled": false,
-        "reg_type": "coil",
-        "address": 6,
-        "type": "switch",
-        "sporadic": true,
-        "group": "additional"
-      },
-      {
         "name": "Turbo mode",
         "enabled": false,
         "reg_type": "coil",
@@ -590,39 +527,17 @@
         "group": "additional"
       },
       {
-        "name": "Sleep mode",
+        "name": "Target fan speed",
         "enabled": false,
-        "reg_type": "coil",
-        "address": 8,
-        "type": "switch",
+        "reg_type": "holding",
+        "address": 31,
+        "type": "range",
+        "min": 0,
+        "max": 100,
         "sporadic": true,
-        "group": "additional"
-      },
-      {
-        "name": "Ionization",
-        "enabled": false,
-        "reg_type": "coil",
-        "address": 9,
-        "type": "switch",
-        "sporadic": true,
-        "group": "additional"
-      },
-      {
-        "name": "Screen light",
-        "reg_type": "coil",
-        "address": 2,
-        "type": "switch",
-        "sporadic": true,
-        "group": "indication"
-      },
-      {
-        "name": "Disable screen when power off",
-        "enabled": false,
-        "reg_type": "coil",
-        "address": 41,
-        "type": "switch",
-        "sporadic": true,
-        "group": "indication"
+        "group": "debug",
+        "readonly": false,
+        "units": "rpm"
       },
       {
         "name": "Temeperature correction",
@@ -733,10 +648,10 @@
     ],
     "translations": {
       "en": {
-        "template_title": "ONOKOM AIR GR-1-MB-B (Adapter for household GREE systems)"
+        "template_title": "ONOKOM AIR MD-1-MB-B (Adapter for household MDV systems)"
       },
       "ru": {
-        "template_title": "ONOKOM AIR GR-1-MB-B (Адаптер для бытовых систем GREE)",
+        "template_title": "ONOKOM AIR MD-1-MB-B (Адаптер для бытовых систем MDV)",
         "General": "Основные режимы и функции",
         "Active": "Состояние",
         "Mode": "Режим",
@@ -756,7 +671,6 @@
         "Temperature control": "Контроль температуры",
         "Allow the use of an external temperature sensor": "Разрешить использование внешнего датчика температуры",
         "Indoor air temperature": "Температура воздуха в помещении",
-        "Outdoor air temperature": "Температура воздуха на улице",
         "Target temperature": "Целевая температура",
         "Show thermostat state as range": "Отображать состояние термостата как ползунок",
         "Thermostat state": "Состояние термостата",
@@ -764,15 +678,6 @@
         "Show vanes as range": "Отображать жалюзи как ползунок",
         "Horizontal vanes": "Горизонтальные жалюзи",
         "Swing": "Качание",
-        "Lowest": "Самое низкое",
-        "Low": "Низкое",
-        "Middle": "Среднее",
-        "High": "Высокое",
-        "Highest": "Самое высокое",
-        "Far Left": "Самое левое",
-        "Left": "Левое",
-        "Right": "Правое",
-        "Far Right": "Самое правое",
         "Vertical vanes": "Вертикальные жалюзи",
         "Vanes swing": "Качание жалюзи",
         "Stop": "Остановлены",
@@ -787,13 +692,7 @@
         "4 Speed": "4 Скорость",
         "5 Speed": "5 Скорость",
         "Quiet mode": "Режим тихий",
-        "Eco mode": "Режим эко",
         "Turbo mode": "Режим турбо",
-        "Sleep mode": "Режим сна",
-        "Ionization": "Ионизация",
-        "Indication": "Индикация",
-        "Screen light": "Подсветка экрана",
-        "Disable screen when power off": "Отключать экран при отключении питания",
         "No": "Нет",
         "Yes": "Да",
         "Baud rate": "Скорость обмена",
@@ -810,6 +709,7 @@
         "Serial": "Серийный номер",
         "Reboot Device": "Перезагрузить устройство",
         "Debug": "Диагностика",
+        "Target fan speed": "Целевая скорость вентилятора",
         "Temeperature correction": "Коррекция температуры",
         "AC connected": "Кондиционер подключен"
       }
