--- a/templates/config-onokom-air-mh-2-mb-b.json
+++ b/templates/config-onokom-air-mh-2-mb-b.json
@@ -1,15 +1,15 @@
 {
   "title": "template_title",
-  "device_type": "ONOKOM-AIR-GR-1-MB-B",
+  "device_type": "ONOKOM-AIR-MH-2-MB-B",
   "group": "g-air-conditioning",
   "hw": [
     {
-      "signature": "GR-1-MB-B"
+      "signature": "MH-2-MB-B"
     }
   ],
   "device": {
-    "name": "ONOKOM-AIR-GR-1-MB-B",
-    "id": "ONOKOM-AIR-GR-1-MB-B",
+    "name": "ONOKOM-AIR-MH-2-MB-B",
+    "id": "ONOKOM-AIR-MH-2-MB-B",
     "groups": [
       {
         "title": "General",
@@ -27,16 +27,6 @@
         "order": 3
       },
       {
-        "title": "Additional",
-        "id": "additional",
-        "order": 4
-      },
-      {
-        "title": "Indication",
-        "id": "indication",
-        "order": 5
-      },
-      {
         "title": "HW Info",
         "id": "hw_info",
         "order": 6
@@ -48,22 +38,6 @@
       }
     ],
     "parameters": [
-      {
-        "id": "Disable_screen_when_power_off",
-        "title": "Disable screen when power off",
-        "address": 41,
-        "reg_type": "coil",
-        "enum": [
-          0,
-          1
-        ],
-        "enum_titles": [
-          "No",
-          "Yes"
-        ],
-        "group": "indication",
-        "order": 1
-      },
       {
         "id": "Allow_the_use_of_an_external_temperature_sensor",
         "title": "Allow the use of an external temperature sensor",
@@ -280,7 +254,7 @@
         "type": "range",
         "format": "u16",
         "min": 0,
-        "max": 5,
+        "max": 4,
         "sporadic": true,
         "group": "general",
         "condition": "Show_fan_as_range==1"
@@ -292,12 +266,49 @@
         "type": "value",
         "format": "u16",
         "min": 0,
-        "max": 5,
+        "max": 4,
         "sporadic": true,
         "group": "general",
         "enum": [
           0,
           1,
+          2,
+          3,
+          4
+        ],
+        "enum_titles": [
+          "Auto",
+          "1 Speed",
+          "2 Speed",
+          "3 Speed",
+          "4 Speed"
+        ],
+        "condition": "Show_fan_as_range!=1"
+      },
+      {
+        "name": "Smart fan speed",
+        "reg_type": "holding",
+        "address": 8,
+        "type": "range",
+        "format": "u16",
+        "min": 0,
+        "max": 5,
+        "sporadic": true,
+        "group": "general",
+        "condition": "Show_fan_as_range==1"
+      },
+      {
+        "name": "Smart fan speed",
+        "reg_type": "holding",
+        "address": 8,
+        "type": "value",
+        "format": "u16",
+        "min": 0,
+        "max": 5,
+        "sporadic": true,
+        "group": "general",
+        "enum": [
+          0,
           2,
           3,
           4,
@@ -310,50 +321,6 @@
           "3 Speed",
           "4 Speed",
           "5 Speed"
-        ],
-        "condition": "Show_fan_as_range!=1"
-      },
-      {
-        "name": "Smart fan speed",
-        "reg_type": "holding",
-        "address": 8,
-        "type": "range",
-        "format": "u16",
-        "min": 0,
-        "max": 7,
-        "sporadic": true,
-        "group": "general",
-        "condition": "Show_fan_as_range==1"
-      },
-      {
-        "name": "Smart fan speed",
-        "reg_type": "holding",
-        "address": 8,
-        "type": "value",
-        "format": "u16",
-        "min": 0,
-        "max": 7,
-        "sporadic": true,
-        "group": "general",
-        "enum": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6,
-          7
-        ],
-        "enum_titles": [
-          "Auto",
-          "Quiet mode",
-          "1 Speed",
-          "2 Speed",
-          "3 Speed",
-          "4 Speed",
-          "5 Speed",
-          "Turbo mode"
         ],
         "condition": "Show_fan_as_range!=1"
       },
@@ -383,19 +350,6 @@
         "group": "temperatureControl",
         "units": "deg C",
         "condition": "Allow_the_use_of_an_external_temperature_sensor==1"
-      },
-      {
-        "name": "Outdoor air temperature",
-        "enabled": false,
-        "reg_type": "holding",
-        "address": 4,
-        "type": "value",
-        "format": "s16",
-        "scale": 0.01,
-        "sporadic": true,
-        "group": "temperatureControl",
-        "readonly": true,
-        "units": "deg C"
       },
       {
         "name": "Target temperature",
@@ -563,68 +517,6 @@
         "condition": "Show_vanes_as_range!=1"
       },
       {
-        "name": "Quiet mode",
-        "enabled": false,
-        "reg_type": "coil",
-        "address": 4,
-        "type": "switch",
-        "sporadic": true,
-        "group": "additional"
-      },
-      {
-        "name": "Eco mode",
-        "enabled": false,
-        "reg_type": "coil",
-        "address": 6,
-        "type": "switch",
-        "sporadic": true,
-        "group": "additional"
-      },
-      {
-        "name": "Turbo mode",
-        "enabled": false,
-        "reg_type": "coil",
-        "address": 7,
-        "type": "switch",
-        "sporadic": true,
-        "group": "additional"
-      },
-      {
-        "name": "Sleep mode",
-        "enabled": false,
-        "reg_type": "coil",
-        "address": 8,
-        "type": "switch",
-        "sporadic": true,
-        "group": "additional"
-      },
-      {
-        "name": "Ionization",
-        "enabled": false,
-        "reg_type": "coil",
-        "address": 9,
-        "type": "switch",
-        "sporadic": true,
-        "group": "additional"
-      },
-      {
-        "name": "Screen light",
-        "reg_type": "coil",
-        "address": 2,
-        "type": "switch",
-        "sporadic": true,
-        "group": "indication"
-      },
-      {
-        "name": "Disable screen when power off",
-        "enabled": false,
-        "reg_type": "coil",
-        "address": 41,
-        "type": "switch",
-        "sporadic": true,
-        "group": "indication"
-      },
-      {
         "name": "Temeperature correction",
         "reg_type": "holding",
         "address": 20,
@@ -733,10 +625,10 @@
     ],
     "translations": {
       "en": {
-        "template_title": "ONOKOM AIR GR-1-MB-B (Adapter for household GREE systems)"
+        "template_title": "ONOKOM AIR MH-2-MB-B (Adapter for household and semi-industrial Mitsubishi Heavy systems)"
       },
       "ru": {
-        "template_title": "ONOKOM AIR GR-1-MB-B (Адаптер для бытовых систем GREE)",
+        "template_title": "ONOKOM AIR MH-2-MB-B (Адаптер для бытовых и полупромышленных систем Mitsubishi Heavy)",
         "General": "Основные режимы и функции",
         "Active": "Состояние",
         "Mode": "Режим",
@@ -756,7 +648,6 @@
         "Temperature control": "Контроль температуры",
         "Allow the use of an external temperature sensor": "Разрешить использование внешнего датчика температуры",
         "Indoor air temperature": "Температура воздуха в помещении",
-        "Outdoor air temperature": "Температура воздуха на улице",
         "Target temperature": "Целевая температура",
         "Show thermostat state as range": "Отображать состояние термостата как ползунок",
         "Thermostat state": "Состояние термостата",
@@ -780,20 +671,11 @@
         "Swinging horizontal blinds": "Качание горизонтальных жалюзи",
         "Swinging vertical blinds": "Качание вертикальных жалюзи",
         "Show fan as range": "Отображать вентилятор как ползунок",
-        "Additional": "Дополнительные режимы и функции",
         "1 Speed": "1 Скорость",
         "2 Speed": "2 Скорость",
         "3 Speed": "3 Скорость",
         "4 Speed": "4 Скорость",
         "5 Speed": "5 Скорость",
-        "Quiet mode": "Режим тихий",
-        "Eco mode": "Режим эко",
-        "Turbo mode": "Режим турбо",
-        "Sleep mode": "Режим сна",
-        "Ionization": "Ионизация",
-        "Indication": "Индикация",
-        "Screen light": "Подсветка экрана",
-        "Disable screen when power off": "Отключать экран при отключении питания",
         "No": "Нет",
         "Yes": "Да",
         "Baud rate": "Скорость обмена",
