--- a/templates/config-onokom-air-tcl-3-mb-b.json
+++ b/templates/config-onokom-air-tcl-3-mb-b.json
@@ -1,15 +1,15 @@
 {
   "title": "template_title",
-  "device_type": "ONOKOM-AIR-GR-1-MB-B",
+  "device_type": "ONOKOM-AIR-TCL-3-MB-B",
   "group": "g-air-conditioning",
   "hw": [
     {
-      "signature": "GR-1-MB-B"
+      "signature": "TCL-3-MB-B"
     }
   ],
   "device": {
-    "name": "ONOKOM-AIR-GR-1-MB-B",
-    "id": "ONOKOM-AIR-GR-1-MB-B",
+    "name": "ONOKOM-AIR-TCL-3-MB-B",
+    "id": "ONOKOM-AIR-TCL-3-MB-B",
     "groups": [
       {
         "title": "General",
@@ -48,22 +48,6 @@
       }
     ],
     "parameters": [
-      {
-        "id": "Disable_screen_when_power_off",
-        "title": "Disable screen when power off",
-        "address": 41,
-        "reg_type": "coil",
-        "enum": [
-          0,
-          1
-        ],
-        "enum_titles": [
-          "No",
-          "Yes"
-        ],
-        "group": "indication",
-        "order": 1
-      },
       {
         "id": "Allow_the_use_of_an_external_temperature_sensor",
         "title": "Allow the use of an external temperature sensor",
@@ -385,10 +369,10 @@
         "condition": "Allow_the_use_of_an_external_temperature_sensor==1"
       },
       {
-        "name": "Outdoor air temperature",
+        "name": "Indoor heat exchanger temperature",
         "enabled": false,
         "reg_type": "holding",
-        "address": 4,
+        "address": 23,
         "type": "value",
         "format": "s16",
         "scale": 0.01,
@@ -404,7 +388,7 @@
         "type": "range",
         "format": "s16",
         "min": 16,
-        "max": 30,
+        "max": 31,
         "scale": 0.01,
         "sporadic": true,
         "group": "temperatureControl",
@@ -450,8 +434,8 @@
         "address": 9,
         "type": "range",
         "format": "u16",
-        "min": 0,
-        "max": 6,
+        "min": 1,
+        "max": 8,
         "sporadic": true,
         "group": "vanes",
         "condition": "Show_vanes_as_range==1"
@@ -463,26 +447,16 @@
         "type": "value",
         "format": "u16",
         "min": 0,
-        "max": 6,
+        "max": 1,
         "sporadic": true,
         "group": "vanes",
         "enum": [
           0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6
+          1
         ],
         "enum_titles": [
           "Stop",
-          "Swing",
-          "Lowest",
-          "Low",
-          "Middle",
-          "High",
-          "Highest"
+          "Swing"
         ],
         "condition": "Show_vanes_as_range!=1"
       },
@@ -493,7 +467,7 @@
         "type": "range",
         "format": "u16",
         "min": 0,
-        "max": 6,
+        "max": 1,
         "sporadic": true,
         "group": "vanes",
         "condition": "Show_vanes_as_range==1"
@@ -505,26 +479,16 @@
         "type": "value",
         "format": "u16",
         "min": 0,
-        "max": 6,
+        "max": 1,
         "sporadic": true,
         "group": "vanes",
         "enum": [
           0,
-          1,
-          2,
-          3,
-          4,
-          5,
-          6
+          1
         ],
         "enum_titles": [
           "Stop",
-          "Swing",
-          "Far Left",
-          "Left",
-          "Middle",
-          "Right",
-          "Far Right"
+          "Swing"
         ],
         "condition": "Show_vanes_as_range!=1"
       },
@@ -599,27 +563,9 @@
         "group": "additional"
       },
       {
-        "name": "Ionization",
-        "enabled": false,
-        "reg_type": "coil",
-        "address": 9,
-        "type": "switch",
-        "sporadic": true,
-        "group": "additional"
-      },
-      {
         "name": "Screen light",
         "reg_type": "coil",
         "address": 2,
-        "type": "switch",
-        "sporadic": true,
-        "group": "indication"
-      },
-      {
-        "name": "Disable screen when power off",
-        "enabled": false,
-        "reg_type": "coil",
-        "address": 41,
         "type": "switch",
         "sporadic": true,
         "group": "indication"
@@ -733,10 +679,10 @@
     ],
     "translations": {
       "en": {
-        "template_title": "ONOKOM AIR GR-1-MB-B (Adapter for household GREE systems)"
+        "template_title": "ONOKOM AIR TCL-3-MB-B (Adapter for semi industrial TCL systems)"
       },
       "ru": {
-        "template_title": "ONOKOM AIR GR-1-MB-B (Адаптер для бытовых систем GREE)",
+        "template_title": "ONOKOM AIR TCL-3-MB-B (Адаптер для полупромышленных систем TCL)",
         "General": "Основные режимы и функции",
         "Active": "Состояние",
         "Mode": "Режим",
@@ -756,7 +702,7 @@
         "Temperature control": "Контроль температуры",
         "Allow the use of an external temperature sensor": "Разрешить использование внешнего датчика температуры",
         "Indoor air temperature": "Температура воздуха в помещении",
-        "Outdoor air temperature": "Температура воздуха на улице",
+        "Indoor heat exchanger temperature": "Температура внутреннего теплообменника",
         "Target temperature": "Целевая температура",
         "Show thermostat state as range": "Отображать состояние термостата как ползунок",
         "Thermostat state": "Состояние термостата",
@@ -764,15 +710,6 @@
         "Show vanes as range": "Отображать жалюзи как ползунок",
         "Horizontal vanes": "Горизонтальные жалюзи",
         "Swing": "Качание",
-        "Lowest": "Самое низкое",
-        "Low": "Низкое",
-        "Middle": "Среднее",
-        "High": "Высокое",
-        "Highest": "Самое высокое",
-        "Far Left": "Самое левое",
-        "Left": "Левое",
-        "Right": "Правое",
-        "Far Right": "Самое правое",
         "Vertical vanes": "Вертикальные жалюзи",
         "Vanes swing": "Качание жалюзи",
         "Stop": "Остановлены",
@@ -790,10 +727,8 @@
         "Eco mode": "Режим эко",
         "Turbo mode": "Режим турбо",
         "Sleep mode": "Режим сна",
-        "Ionization": "Ионизация",
         "Indication": "Индикация",
         "Screen light": "Подсветка экрана",
-        "Disable screen when power off": "Отключать экран при отключении питания",
         "No": "Нет",
         "Yes": "Да",
         "Baud rate": "Скорость обмена",
